--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: 'General Sans', sans-serif;
+  width: 100vw;
+  background-color: #dfdff0;
+  overflow-x: hidden;
+}
+
 @layer base {
   @font-face {
     font-family: 'zentry';
